--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas Biodata</title>
-    <script src="alert.js"></script>
-    <script src="button.js"></script>
-    <script src="div.js"></script>
 </head>
 <body>
     <h1>Biodata Saya</h1>
@@ -16,5 +13,10 @@
     <button onclick="Alamat()">Alamat</button>
 
     <div id="Biodata"></div>
+
+    <!-- Script ditaruh di bawah body -->
+    <script src="alert.js"></script>
+    <script src="div.js"></script>
+    <script src="button.js"></script>
 </body>
 </html>
